fixed footer layout spacing inconsistency

--- a/themes/hugo-theme-qaul/static/css/qaul.css
+++ b/themes/hugo-theme-qaul/static/css/qaul.css
@@ -222,18 +222,16 @@ nav.main .languages ul a:hover {
 
 /* footer */
 footer {
-	padding: 1rem;
 	background-color: var(--c-footer-bg);
 	color: var(--c-footer-txt);
 	box-shadow: 0 0 1rem 0 var(--c-footer-bg);
 }
 footer nav {
-	max-width: var(--s-pagewidth);
-	margin: 0 auto 0 auto;
+	padding: 1rem;
 	display: flex;
 	align-items: flex-start;
 	flex-flow: row wrap;
-	justify-content: space-around
+	justify-content: space-around;
 }
 
 footer a {
